--- a/staff.html
+++ b/staff.html
@@ -136,17 +136,17 @@
                     <div class="flex-1">
                         <div class="flex items-start justify-between mb-2">
                             <div>
-                                <h3 class="text-2xl font-bold text-gray-100">Marcus Blackwood</h3>
+                                <h3 class="text-2xl font-bold text-gray-100">Jack Davies</h3>
                                 <span class="rank-badge">COMMISSIONER</span>
                             </div>
                         </div>
                         <p class="text-gray-400 mt-4">
-                            Overall command authority for UKFR operations. 25 years of law enforcement experience with specialization in tactical coordination and crisis management.
+                            Overall command authority for UKFR operations. 2 years of law enforcement experience with specialization in tactical firearms. AFO Commisioner.
                         </p>
                         <div class="flex items-center space-x-4 mt-4 text-sm text-gray-500">
                             <span class="flex items-center space-x-1">
                                 <i data-lucide="shield-check" size="16"></i>
-                                <span>Active Since 2001</span>
+                                <span>Active Since 2024</span>
                             </span>
                         </div>
                     </div>
@@ -162,17 +162,17 @@
                     <div class="flex-1">
                         <div class="flex items-start justify-between mb-2">
                             <div>
-                                <h3 class="text-2xl font-bold text-gray-100">Sarah Chen</h3>
+                                <h3 class="text-2xl font-bold text-gray-100">Zane Adamson</h3>
                                 <span class="rank-badge">DEPUTY COMMISSIONER</span>
                             </div>
                         </div>
                         <p class="text-gray-400 mt-4">
-                            Second-in-command overseeing daily operations and strategic planning. Expert in inter-agency coordination and emergency response protocols.
+                            Second-in-command overseeing daily operations and strategic planning. NCA Commisioner.
                         </p>
                         <div class="flex items-center space-x-4 mt-4 text-sm text-gray-500">
                             <span class="flex items-center space-x-1">
                                 <i data-lucide="shield-check" size="16"></i>
-                                <span>Active Since 2005</span>
+                                <span>Active Since 2024</span>
                             </span>
                         </div>
                     </div>
@@ -192,14 +192,14 @@
                         <i data-lucide="radio" class="text-neon" size="32"></i>
                     </div>
                     <div>
-                        <h3 class="text-xl font-bold text-gray-100">James Mitchell</h3>
-                        <span class="text-xs text-neon-purple font-semibold">CHIEF OF OPERATIONS</span>
+                        <h3 class="text-xl font-bold text-gray-100">Jack Davies</h3>
+                        <span class="text-xs text-neon-purple font-semibold">CHIEF OF ARMED FORCES</span>
                     </div>
                 </div>
                 <p class="text-gray-400 text-sm mb-3">
-                    Tactical deployment and field operations management across all sectors.
+                    Tactical deployment management across all sectors.
                 </p>
-                <div class="text-xs text-gray-500">18 years experience</div>
+                <div class="text-xs text-gray-500">2 years experience</div>
             </div>
 
             <!-- Chief of Training -->
@@ -209,14 +209,14 @@
                         <i data-lucide="graduation-cap" class="text-neon" size="32"></i>
                     </div>
                     <div>
-                        <h3 class="text-xl font-bold text-gray-100">David Torres</h3>
-                        <span class="text-xs text-neon-purple font-semibold">CHIEF OF TRAINING</span>
+                        <h3 class="text-xl font-bold text-gray-100">Zane Adamson</h3>
+                        <span class="text-xs text-neon-purple font-semibold">CHIEF OF NCA</span>
                     </div>
                 </div>
                 <p class="text-gray-400 text-sm mb-3">
-                    Development and delivery of all training programs and certifications.
+                    HEAD OFFICER IN NATIONAL CRIME AGENCY
                 </p>
-                <div class="text-xs text-gray-500">20 years experience</div>
+                <div class="text-xs text-gray-500">2 years experience</div>
             </div>
 
             <!-- Chief of Intelligence -->
@@ -226,14 +226,14 @@
                         <i data-lucide="brain" class="text-neon" size="32"></i>
                     </div>
                     <div>
-                        <h3 class="text-xl font-bold text-gray-100">Elena Volkov</h3>
+                        <h3 class="text-xl font-bold text-gray-100">N/A</h3>
                         <span class="text-xs text-neon-purple font-semibold">CHIEF OF INTELLIGENCE</span>
                     </div>
                 </div>
                 <p class="text-gray-400 text-sm mb-3">
                     Intelligence gathering, threat assessment, and strategic analysis.
                 </p>
-                <div class="text-xs text-gray-500">15 years experience</div>
+                <div class="text-xs text-gray-500">N/A years experience</div>
             </div>
 
             <!-- Chief Technology Officer -->
@@ -243,14 +243,14 @@
                         <i data-lucide="laptop" class="text-neon" size="32"></i>
                     </div>
                     <div>
-                        <h3 class="text-xl font-bold text-gray-100">Aisha Patel</h3>
+                        <h3 class="text-xl font-bold text-gray-100">N/A</h3>
                         <span class="text-xs text-neon-purple font-semibold">CHIEF TECHNOLOGY OFFICER</span>
                     </div>
                 </div>
                 <p class="text-gray-400 text-sm mb-3">
                     Technology infrastructure, communications systems, and data security.
                 </p>
-                <div class="text-xs text-gray-500">12 years experience</div>
+                <div class="text-xs text-gray-500">N/A years experience</div>
             </div>
 
             <!-- Chief Medical Officer -->
@@ -260,14 +260,14 @@
                         <i data-lucide="heart-pulse" class="text-neon" size="32"></i>
                     </div>
                     <div>
-                        <h3 class="text-xl font-bold text-gray-100">Dr. Robert Hayes</h3>
+                        <h3 class="text-xl font-bold text-gray-100">N/A</h3>
                         <span class="text-xs text-neon-purple font-semibold">CHIEF MEDICAL OFFICER</span>
                     </div>
                 </div>
                 <p class="text-gray-400 text-sm mb-3">
                     Emergency medical services, health protocols, and wellness programs.
                 </p>
-                <div class="text-xs text-gray-500">22 years experience</div>
+                <div class="text-xs text-gray-500">N/A</div>
             </div>
 
             <!-- Chief Legal Counsel -->
@@ -277,120 +277,19 @@
                         <i data-lucide="scale" class="text-neon" size="32"></i>
                     </div>
                     <div>
-                        <h3 class="text-xl font-bold text-gray-100">Thomas Bradford</h3>
+                        <h3 class="text-xl font-bold text-gray-100">N/A</h3>
                         <span class="text-xs text-neon-purple font-semibold">CHIEF LEGAL COUNSEL</span>
                     </div>
                 </div>
                 <p class="text-gray-400 text-sm mb-3">
                     Legal compliance, policy development, and regulatory oversight.
                 </p>
-                <div class="text-xs text-gray-500">16 years experience</div>
+                <div class="text-xs text-gray-500">N/A years experience</div>
             </div>
         </div>
     </section>
 
-    <!-- Sector Commanders -->
-    <section class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
-        <h2 class="text-3xl font-bold text-neon-purple mb-8">Sector Commanders</h2>
-        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
-            <!-- London Metro -->
-            <div class="glass-card rounded-xl p-6 hover:neon-border transition-all">
-                <div class="flex items-center justify-between mb-4">
-                    <h3 class="text-lg font-bold text-gray-100">London Metro</h3>
-                    <i data-lucide="map-pin" class="text-neon"></i>
-                </div>
-                <div class="space-y-2">
-                    <p class="text-gray-300 font-semibold">Cdr. Victoria Stone</p>
-                    <p class="text-sm text-gray-400">Central London tactical operations and rapid response coordination</p>
-                    <div class="flex items-center space-x-2 text-xs text-gray-500 mt-3">
-                        <i data-lucide="users" size="14"></i>
-                        <span>42 Active Units</span>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Manchester -->
-            <div class="glass-card rounded-xl p-6 hover:neon-border transition-all">
-                <div class="flex items-center justify-between mb-4">
-                    <h3 class="text-lg font-bold text-gray-100">Manchester</h3>
-                    <i data-lucide="map-pin" class="text-neon"></i>
-                </div>
-                <div class="space-y-2">
-                    <p class="text-gray-300 font-semibold">Cdr. Michael O'Brien</p>
-                    <p class="text-sm text-gray-400">Northern sector strategic command and inter-city coordination</p>
-                    <div class="flex items-center space-x-2 text-xs text-gray-500 mt-3">
-                        <i data-lucide="users" size="14"></i>
-                        <span>28 Active Units</span>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Birmingham -->
-            <div class="glass-card rounded-xl p-6 hover:neon-border transition-all">
-                <div class="flex items-center justify-between mb-4">
-                    <h3 class="text-lg font-bold text-gray-100">Birmingham</h3>
-                    <i data-lucide="map-pin" class="text-neon"></i>
-                </div>
-                <div class="space-y-2">
-                    <p class="text-gray-300 font-semibold">Cdr. Jamal Williams</p>
-                    <p class="text-sm text-gray-400">Midlands operational oversight and community liaison</p>
-                    <div class="flex items-center space-x-2 text-xs text-gray-500 mt-3">
-                        <i data-lucide="users" size="14"></i>
-                        <span>19 Active Units</span>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Scotland -->
-            <div class="glass-card rounded-xl p-6 hover:neon-border transition-all">
-                <div class="flex items-center justify-between mb-4">
-                    <h3 class="text-lg font-bold text-gray-100">Scotland</h3>
-                    <i data-lucide="map-pin" class="text-neon"></i>
-                </div>
-                <div class="space-y-2">
-                    <p class="text-gray-300 font-semibold">Cdr. Fiona MacLeod</p>
-                    <p class="text-sm text-gray-400">Scottish operations with emphasis on rural deployment</p>
-                    <div class="flex items-center space-x-2 text-xs text-gray-500 mt-3">
-                        <i data-lucide="users" size="14"></i>
-                        <span>15 Active Units</span>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Wales -->
-            <div class="glass-card rounded-xl p-6 hover:neon-border transition-all">
-                <div class="flex items-center justify-between mb-4">
-                    <h3 class="text-lg font-bold text-gray-100">Wales</h3>
-                    <i data-lucide="map-pin" class="text-neon"></i>
-                </div>
-                <div class="space-y-2">
-                    <p class="text-gray-300 font-semibold">Cdr. Dylan Evans</p>
-                    <p class="text-sm text-gray-400">Welsh territory coverage and mountain rescue integration</p>
-                    <div class="flex items-center space-x-2 text-xs text-gray-500 mt-3">
-                        <i data-lucide="users" size="14"></i>
-                        <span>12 Active Units</span>
-                    </div>
-                </div>
-            </div>
-
-            <!-- South Coast -->
-            <div class="glass-card rounded-xl p-6 hover:neon-border transition-all">
-                <div class="flex items-center justify-between mb-4">
-                    <h3 class="text-lg font-bold text-gray-100">South Coast</h3>
-                    <i data-lucide="map-pin" class="text-neon"></i>
-                </div>
-                <div class="space-y-2">
-                    <p class="text-gray-300 font-semibold">Cdr. Amanda Foster</p>
-                    <p class="text-sm text-gray-400">Coastal operations and maritime emergency response</p>
-                    <div class="flex items-center space-x-2 text-xs text-gray-500 mt-3">
-                        <i data-lucide="users" size="14"></i>
-                        <span>11 Active Units</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
+   
     <!-- Call to Action -->
     <section class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
         <div class="glass-card rounded-xl p-12 neon-border text-center">
