--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </head>
 <body class="text-gray-100">
     <!-- Navigation -->
-    <nav class="sticky top-0 z-50 glass-card">
+    <nav class="sticky top-0 z-50 glass-card">                                                                                                    
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
                 <div class="flex items-center space-x-2">
@@ -169,8 +169,8 @@
         <div class="glass-card rounded-xl p-12 neon-border">
             <div class="grid md:grid-cols-4 gap-8 text-center">
                 <div class="space-y-2">
-                    <div class="text-4xl font-bold text-neon">500+</div>
-                    <div class="text-gray-400 uppercase tracking-wide text-sm">Active Operatives</div>
+                    <div class="text-4xl font-bold text-neon">0 :[</div>
+                    <div class="text-gray-400 uppercase tracking-wide text-sm">Active Members</div>
                 </div>
                 <div class="space-y-2">
                     <div class="text-4xl font-bold text-neon-purple">10K+</div>
@@ -178,11 +178,11 @@
                 </div>
                 <div class="space-y-2">
                     <div class="text-4xl font-bold text-neon">24/7</div>
-                    <div class="text-gray-400 uppercase tracking-wide text-sm">Active Coverage</div>
+                    <div class="text-gray-400 uppercase tracking-wide text-sm">Active Server</div>
                 </div>
                 <div class="space-y-2">
-                    <div class="text-4xl font-bold text-neon-purple">15</div>
-                    <div class="text-gray-400 uppercase tracking-wide text-sm">Tactical Units</div>
+                    <div class="text-4xl font-bold text-neon-purple">2</div>
+                    <div class="text-gray-400 uppercase tracking-wide text-sm">Staff [Hiring]</div>
                 </div>
             </div>
         </div>
@@ -198,7 +198,7 @@
                         <span class="text-lg font-bold hero-text">UKFR</span>
                     </div>
                     <p class="text-gray-400 text-sm">
-                        United Kingdom First Response - Elite tactical operations and emergency coordination.
+                        UKFR — Step Into the Blue Line.
                     </p>
                 </div>
                 <div>
